SERVER-55013 Improvement lifetime management in PooledLDAPConnection::runFuncWithTimeout

GitOrigin-RevId: 6fdb08360cb89235a75ef26b564168fadf2c1023